[build-system]
# virtualenv 20.0.34 partly breaks pre-commit under conda
# https://github.com/ContinuumIO/anaconda-issues/issues/12094
requires = ["poetry>=1.2,<2", "virtualenv>=20", "wheel>=0.37,<1.0"]
build-backend = "poetry.masonry.api"


#########################################################################################
# Poetry metadata
#########################################################################################

[tool.poetry]
name = "sauronlab"
version = "0.1.0+dev.snapshot"
description = "Zebrafish behavioral profiling and visualization in Python."
authors = ["Douglas Myers-Turnbull"]
maintainers = ["Douglas Myers-Turnbull"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["zebrafish", "behavior", "data science", "bioinformatics", "cheminformatics"]
homepage = "https://github.com/dmyersturnbull/sauron-legacy"
repository = "https://github.com/dmyersturnbull/sauron-legacy"
documentation = "https://github.com/dmyersturnbull/sauron-legacy"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Cheminformatics",
    "Typing :: Typed"
]

[tool.poetry.urls]
CI = "https://github.com/dmyersturnbull/sauron-legacy/actions"
Issues = "https://github.com/dmyersturnbull/sauron-legacy/issues"
Download = "https://pypi.org/project/sauron-legacy/"
Changelog = "https://github.com/dmyersturnbull/sauron-legacy/blob/main/CHANGELOG.md"

[tool.poetry.scripts]
sauronlab = "sauronlab.cli:cli"


#########################################################################################
# Poetry build & dependencies
#########################################################################################

[tool.poetry.dependencies]
python                         = ">=3.9, <3.12"
decorateme                     = "^0.3"
loguru                         = ">=0.6, <1.0"
joblib                         = "^1.1"
natsort                        = ">=8"
numpy                          = "^1.23"
pandas                         = "^1.4"
peewee                         = "^3.15"
pillow                         = "^9"
pocketutils                    = {version="^0.9", extras=["tools"]}
pyarrow                        = ">=9"
pydub                          = ">=0.25.1"
regex                          = ">=2022"
requests                       = "^2.26"
scipy                          = {version="^1.9"}
soundfile                      = {version=">=0.10, <1.0"}
typer                          = ">=0.6, <1.0"
typeddfs                       = {version=">=0.14.3, <0.16", extras=["feather", "parquet", "excel"]}
#valarpy                        = {path = "../valarpy/", develop=true}

clana                          = {optional=true, version="~0.4"}
cycler                         = {optional=true, version=">=0.10, <1.0"}
ipympl                         = {optional=true, version=">=0.8"}
matplotlib                     = {optional=true, version="^3.5"}
moviepy                        = {optional=true, version="^1"}
rapidfuzz                      = {optional=true, version="^2.3"}
scikit-learn                   = {optional=true, version="^1.1"}
seaborn                        = {optional=true, version=">=0.11, <1.0"}
jupyterlab                     = {optional=true, version=">=3"}
statsmodels                    = ">=0.4"
[tool.poetry.dev-dependencies]
pre-commit               = "^2.20"
tomlkit                  = ">=0.11, <1.0"


#########################################################################################
# Tyrannosaurus
#########################################################################################

[tool.tyrannosaurus.sources]
doc_license        = "'CC BY 4.0'"
doc_license_url    = "'https://creativecommons.org/licenses/by/4.0'"
status             = "'Development'"
date               = "'${today}'"
version            = "tool.poetry.version"
release            = "tool.poetry.version"
devdeps            = "tool.poetry.dev-dependencies"
precommitvr        = "tool.poetry.dev-dependencies"
precommitconfigvr  = "tool.poetry.dev-dependencies"
linelength         = "tool.black.line-length"
copyright          = "'Douglas Myers-Turnbull 2016–2021'"
authors            = [
    "Douglas Myers-Turnbull <github:dmyersturnbull,orcid:0000-0003-3610-4808>"
]
contributors = [
	"Chris S Ki <github:chriski777>",
	"Cole Helsell <github:chelsell,orcid:0000-0002-8869-3125>"
]

maintainers        = "tool.tyrannosaurus.sources.authors"

[tool.tyrannosaurus.sources.flake8skip]
# 212 and 213 contradict; 203 and 204 contradict; D302 is not relevant in Py3
# D107 isn't needed sometimes; and the rest are overly picky
all   = "'W503,E203,E225,E301,E302,E501,D107,D200,D205,D400,D403,D409,D410,D411,D212,W391,W293'"
test  = "'D100,D101,D102,D103,D104,S101,W503,E203,E225,E301,E302,E501,D107,D200,D205,D400,D403,D409,D410,D411,D212,W391,W293'"

[tool.tyrannosuarus.paths]
recipe             = "'recipes/sauronlab/meta.yaml'"
environment        = "'environment.yml'"

[tool.tyrannosaurus.targets]
pyproject    = true
init         = true
precommit    = true
tox          = true
docs         = true
recipes      = true
license      = true
authors      = true
github       = true
travis       = true
scrutinizer  = true
dockerfile   = true
readme       = true
changelog    = true
citation     = true
codemeta     = true
headers      = false
environment  = false


#########################################################################################
# Testing
#########################################################################################

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

#########################################################################################
# Style checking
#########################################################################################

[tool.coverage.paths]
source = ["sauronlab"]

[tool.coverage.run]
source = ["sauronlab"]

[tool.coverage.report]
show_missing = true

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
line_length = 100
